ADD_SUBDIRECTORY(cg1)
ADD_SUBDIRECTORY(tutorial)

MACRO (ADD_SGE_TEST name)
	ADD_EXECUTABLE (sge${name}test ${name}.cpp)
	TARGET_LINK_LIBRARIES (sge${name}test sgecore)
	INSTALL (TARGETS sge${name}test DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
ENDMACRO ()

ADD_EXECUTABLE (sgeshadertest shader/main.cpp)
TARGET_LINK_LIBRARIES (sgeshadertest sgecore)
INSTALL (TARGETS sgeshadertest DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

ADD_SGE_TEST(algorithm)
ADD_SGE_TEST(anim)
ADD_SGE_TEST(appdir)
ADD_SGE_TEST(array)
ADD_SGE_TEST(bitmapfont)
ADD_SGE_TEST(bloom)
ADD_SGE_TEST(cie)
ADD_SGE_TEST(codecvt)
ADD_SGE_TEST(collision)
ADD_SGE_TEST(configdir)
ADD_SGE_TEST(console)
ADD_SGE_TEST(container)
ADD_SGE_TEST(doppler)
ADD_SGE_TEST(field)
ADD_SGE_TEST(fullscreen)
ADD_SGE_TEST(ini)
ADD_SGE_TEST(io)
ADD_SGE_TEST(json)
ADD_SGE_TEST(math)
ADD_SGE_TEST(mergeimage)
ADD_SGE_TEST(model)
ADD_SGE_TEST(optional)
ADD_SGE_TEST(pragmamessage)
ADD_SGE_TEST(plugin)
ADD_SGE_TEST(pool)
ADD_SGE_TEST(random)
ADD_SGE_TEST(screenshot)
ADD_SGE_TEST(skeleton)
ADD_SGE_TEST(sound)
ADD_SGE_TEST(strongtypedef)
ADD_SGE_TEST(target)
ADD_SGE_TEST(tree)
ADD_SGE_TEST(variant)
ADD_SGE_TEST(vertex)
ADD_SGE_TEST(modifier)

# TODO: this should be part of the macro
#IF (NOT MSVC)
#	TARGET_LINK_LIBRARIES (sgesoundtest ${Boost_program_options_LIBRARIES})
#ENDIF ()

IF (ENABLE_GUI)
	ADD_SGE_TEST(edit)
	ADD_SGE_TEST(grid)
	ADD_SGE_TEST(gui)
	TARGET_LINK_LIBRARIES (sgeedittest sgegui)
	TARGET_LINK_LIBRARIES (sgegridtest sgegui)
	TARGET_LINK_LIBRARIES (sgeguitest sgegui)
ENDIF ()

#ADD_EXECUTABLE (islandtest island/main.cpp quadtree/quadtree.cpp quadtree/mathstuff.cpp island/island_extractor.cpp island/skydome.cpp)
#TARGET_LINK_LIBRARIES (islandtest sgecore)
#INSTALL (TARGETS islandtest DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

#ADD_EXECUTABLE (skydometest island/skydome.cpp island/skydome_testcase.cpp)
#TARGET_LINK_LIBRARIES (skydometest sgecore)
#INSTALL (TARGETS skydometest DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
