FIND_PACKAGE(
	Boost 1.45.0 REQUIRED COMPONENTS
	unit_test_framework
)

MACRO(
	ADD_SGE_TEST
	PATHNAME
	ADDITONAL_LIBS
)
	STRING(REGEX REPLACE "\\/" "_" TESTNAME ${PATHNAME})

	SET(TESTNAME test_${TESTNAME})

	ADD_EXECUTABLE (${TESTNAME} ${PATHNAME}.cpp)

	IF(MSVC)
		SET_PROPERTY(
			TARGET ${TESTNAME}
			PROPERTY COMPILE_FLAGS
			"-DBOOST_TEST_NO_LIB -DBOOST_TEST_MODULE=${TESTNAME}"
		)
	ELSE()
		SET_PROPERTY(
			TARGET ${TESTNAME}
			PROPERTY COMPILE_FLAGS
			"-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MODULE=${TESTNAME}"
		)
	ENDIF()

	TARGET_LINK_LIBRARIES (
		${TESTNAME}
		sgecore
		${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
		${ADDITONAL_LIBS}
	)

	ADD_TEST(NAME ${TESTNAME} COMMAND ${TESTNAME})
ENDMACRO()

IF(ENABLE_CONSOLE)
	ADD_SGE_TEST(console/cursor "sgeconsole")
ENDIF()

IF(ENABLE_PARSE)
	ADD_SGE_TEST(parse/json "sgeparse")
ENDIF()

IF(ENABLE_CONFIG)
	ADD_SGE_TEST(charconv/main "sgeconfig")
ENDIF()
